Fix - Changelog type Z-index

--- a/inc/admin/sass/_colormag-dashboard.scss
+++ b/inc/admin/sass/_colormag-dashboard.scss
@@ -810,7 +810,7 @@ h1.hndle{
 				font-size: 14px;
 				padding: 0 8px;
 				position: sticky;
-				z-index: 999;
+				z-index: 9999;
 				top: 0;
 			}
 
